@@ -490,6 +490,7 @@ public:
 
 %{
 class wxPyTreeCtrl : public wxTreeCtrl {
+    DECLARE_ABSTRACT_CLASS(wxPyTreeCtrl);
 public:
     wxPyTreeCtrl(wxWindow *parent, wxWindowID id,
                  const wxPoint& pos,
@@ -498,7 +499,6 @@ public:
                  const wxValidator& validator,
                  char* name) :
         wxTreeCtrl(parent, id, pos, size, style, validator, name) {}
-
 
     int OnCompareItems(const wxTreeItemId& item1,
                        const wxTreeItemId& item2) {
@@ -516,6 +516,8 @@ public:
     }
     PYPRIVATE;
 };
+
+IMPLEMENT_ABSTRACT_CLASS(wxPyTreeCtrl, wxTreeCtrl);
 
 %}
 
